# ChromedriverManager

./: .gitignore  Cargo.toml  readme.md
.github/workflows/: rust.yml
src/: lib.rs  loglevel.rs  manager.rs
src/structs/: chrome.rs  packages.rs
src/utils/: appdata.rs  downloader.rs  functions.rs  version.rs
