[package]
name = "ChromedriverManager"
description = "A Rust library for downloading and managing ChromeDrivers."
version = "0.1.0"
edition = "2021"
authors = ["Alex L"]


[dependencies]
anyhow = "1.0.75"
indicatif = "0.17.7"
reqwest = "0.11.22"
serde = "1.0.193"
serde_json = "1.0.108"
thirtyfour = "0.31.0"
zip-extensions = "0.6.2"

[dev-dependencies]
tokio = { version = "1.34.0", features = ["full"] }

[lib]
name = "chromedriver_manager"
path = "src/lib.rs"

