[package]
name = "chromedriver-manager"
description = "A Rust library for downloading and managing ChromeDrivers."
homepage = "https://github.com/Sw1ndlers/ChromedriverManager"
keywords = ["chromedriver", "thirtyfour"]
license = "MIT"
version = "0.2.1"
edition = "2021"
authors = ["Alex L"]

[dependencies]
anyhow = "1.0.75"
indicatif = "0.17.7"
platform-dirs = "0.3.0"
reqwest = "0.11.22"
serde = "1.0.193"
serde_json = "1.0.108"
thirtyfour = "0.31.0"
zip-extensions = "0.6.2"

[dev-dependencies]
tokio = { version = "1.34.0", features = ["full"] }

[lib]
name = "chromedriver_manager"
path = "src/lib.rs"

